--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Wild & Wacky Vegetables</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    
+    <link rel="stylesheet" type='text.css' >
   </head>
 
   <body>
@@ -15,21 +15,52 @@
           <div class="bg-light rounded p-3">
           <h1>Some Favorites</h1>
             <ul class="nav flex-column">
-              <li><a class="nav-link" href="#">Celery Root</a>
-              <li><a class="nav-link" href="#">Spaghetti Squash</a>
-              <li><a class="nav-link" href="#">Killer Mushrooms</a>
+            <li><a class="nav-link" href="#">Celery Root</a>
+            <li><a class="nav-link" href="#">Spaghetti Squash</a>
+            <li><a class="nav-link" href="#">Killer Mushrooms</a>
             </ul>
+
+            <form>
+              <div class="form-group">
+                <input type="text">
+              </div>
+              <div class="for-group">
+                <button type="submit" class="btn btn-primary">Search Recipes</button>
+              </div>
+            </form>
+
         </div>
         </div>
         <div class="col-md-9">
-
           <h1>Wild & Wacky Vegetables</h1>
-          <p>Kale courgette salsify mustard broccoli seakale wakame potato fava bean tigernut leek celery spinach avocado cabbage celtuce rutabaga kohlrabi. Parsnip pea soko groundnut bitterleaf spring onion. Grape dulse rutabaga lentil gram kakadu plum water spinach cabbage lotus root.
-          </p>
-          <p>
-          Mung bean quandong kale prairie turnip celery gram zucchini pumpkin green bean silver beet chard endive komatsuna eggplant kakadu plum radish broccoli. Arugula amaranth fennel wakame peanut garlic chickweed. Sorrel jícama quandong kale chickpea water chestnut rock melon aubergine lettuce pea azuki bean cress onion sea lettuce dandelion nori dulse rutabaga. Coriander napa cabbage bok choy carrot kakadu plum brussels sprout bamboo shoot salad okra cucumber garlic kombu beet greens cauliflower summer purslane. Artichoke daikon horseradish arugula taro catsear kombu rock melon pea sprouts collard greens mustard courgette lettuce soko maize plantain.
-          </p>
+          <blockquote class="blockquote">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus tristique dapibus. Curabitur luctus mauris tortor, vitae faucibus lectus sollicitudin quis</p>
+          <footer class="blockquote-footer">Tom Robbins</footer>
+          </blockquote>
 
+          <h1>Some deseases</h1>
+          <table class="table table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Vaggie</th>
+                <th>Disease</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Beets</th>
+                <th>Beeturia</th>
+              </tr>
+              <tr>
+                <th>Carrots</th>
+                <th>Carrotians</th>
+              </tr>
+            </tbody>
+          </table>
+
+          <h1>Really informative info</h1>
+          <p>Kale courgette salsify mustard broccoli seakale wakame potato fava bean tigernut leek celery spinach avocado cabbage celtuce rutabaga kohlrabi. Parsnip pea soko groundnut bitterleaf spring onion. Grape dulse rutabaga lentil gram kakadu plum water spinach cabbage lotus root.</p>
+          <p>Mung bean quandong kale prairie turnip celery gram zucchini pumpkin green bean silver beet chard endive komatsuna eggplant kakadu plum radish broccoli. Arugula amaranth fennel wakame peanut garlic chickweed. Sorrel jícama quandong kale chickpea water chestnut rock melon aubergine lettuce pea azuki bean cress onion sea lettuce dandelion nori dulse rutabaga. Coriander napa cabbage bok choy carrot kakadu plum brussels sprout bamboo shoot salad okra cucumber garlic kombu beet greens cauliflower summer purslane. Artichoke daikon horseradish arugula taro catsear kombu rock melon pea sprouts collard greens mustard courgette lettuce soko maize plantain.</p>
         </div>
       </div>
     </div>
