--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         </div>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 p-3">
+          <div class="alert alert-danger" role="alert">
+            A simple primary alert—check it out!
+          </div>
           <h1>Wild & Wacky Vegetables</h1>
           <blockquote class="blockquote">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dapibus tristique dapibus. Curabitur luctus mauris tortor, vitae faucibus lectus sollicitudin quis</p>
@@ -57,6 +60,25 @@
               </tr>
             </tbody>
           </table>
+          
+
+          <div class="row">
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/800px-Beets-Bundle.jpg">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/9/9e/CarrotDiversityLg.jpg">
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#">
+                <img class="img-thumbnail" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Green_Asparagus_New_York_11_May_2006.jpg/220px-Green_Asparagus_New_York_11_May_2006.jpg">
+              </a>
+            </div>
+          </div>+
 
           <h1>Really informative info</h1>
           <p>Kale courgette salsify mustard broccoli seakale wakame potato fava bean tigernut leek celery spinach avocado cabbage celtuce rutabaga kohlrabi. Parsnip pea soko groundnut bitterleaf spring onion. Grape dulse rutabaga lentil gram kakadu plum water spinach cabbage lotus root.</p>
